<resources>
    <!-- Preferences Array -->
    <string name="preferences_key_language">language</string>
    <string name="preferences_key_distance_units">distance_units</string>
    <string name="preferences_key_fluid_units">fluid_units</string>
    <string name="preferences_key_vehicle_sortby">vehicle_sort</string>
    <string-array name="language_array">
        <item>@string/english</item>
    </string-array>
    <string-array name="distance_measure_array">
        <item>@string/miles</item>
        <item>@string/kilometers</item>
    </string-array>
    <string-array name="fluid_measure_array">
        <item>@string/gallons</item>
        <item>@string/liters</item>
    </string-array>
    <string-array name="vehicle_display_array">
        <item>@string/none</item>
        <item>@string/most_recently_used</item>
        <item>@string/year</item>
        <item>@string/make</item>
        <item>@string/model</item>
    </string-array>
    <!-- Vehicle Type Array -->
    <string name="vehicle_type_prompt">Choose vehicle type</string>
    <string-array name="vehicle_type_array">
        <item name="car_truck_motorcycle">Car-Truck-Motorcycle</item>
        <item name="utility">Utility-Tractor-Mower</item>
    </string-array>
    <string name="app_name">Vehicle Log</string>
    <string name="title_vehicle_detail">Vehicle Detail</string>
    <string name="no_notes_to_display">No notes to display</string>
    <string name="no_fuel_economy_to_display">No fuel economy to display</string>
    <string name="no_renewal_date_to_display">No renewal date to display</string>
    <string name="no_license_plate_to_display">No license plate to display</string>
    <string name="no_vin_to_display">No VIN to display</string>
    <string name="no_vehicle_year_to_display">No vehicle year to display</string>
    <string name="no_vehicle_make_to_display">No vehicle make to display</string>
    <string name="no_vehicle_model_to_display">No vehicle model to display</string>
    <string name="notes_label">Notes:</string>
    <string name="fuel_economy_label">Fuel economy:</string>
    <string name="lp_renew_date_label">LP renew date:</string>
    <string name="license_plate_label">License plate:</string>
    <string name="vin_label">VIN:</string>
    <string name="model_year">Model year:</string>
    <string name="model_label">Model:</string>
    <string name="make_label">Make:</string>
    <string name="view_vehicle">View Vehicle</string>
    <string name="enter_the_make">Enter the make</string>
    <string name="enter_the_model">Enter the model</string>
    <string name="enter_the_vin">Enter the VIN</string>
    <string name="enter_the_license_plate">Enter the license plate</string>
    <string name="enter_notes_here">Enter notes here</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="distance_units">Distance units</string>
    <string name="fluid_units">Fluid units</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="english">English</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="gallons">Gallons</string>
    <string name="liters">liters</string>
    <string name="none">None</string>
    <string name="most_recently_used">Most recently used</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="new_vehicle">New Vehicle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="vehicle_type">Vehicle type:</string>
    <string name="enter_the_model_year">Enter the model year</string>
    <string name="enter">ENTER</string>
    <string name="cancel">CANCEL</string>
    <string name="set_renewal_date">Set Renewal Date</string>
    <string name="set_model_year">Set Model Year</string>
    <string name="get_vehicle_image_by">Get Vehicle Image By:</string>
    <string name="choose_app_icon">Choose an app icon</string>
    <string name="choose_image_on_phone">Choose an image on the device</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="ok">OK</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="sure_want_to_delete">Are you sure you want to delete:</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="return_to_edit">RETURN TO EDIT</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="discard">DISCARD</string>
    <string name="title_activity_fuel_entry_list">Fuel Entries</string>
    <string name="action_settings">Settings</string>
    <string name="vehicle_image_content_description">Vehicle Image or Icon</string>
</resources>
