<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context="com.diversedistractions.vehiclelog.VehicleDetailFragment" >

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/vehicleImageButton"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/vi_no_vehicle_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/vehicle_type"/>

        <Spinner
            android:id="@+id/vehicleTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/spinner_dropdown_background"
            android:entries="@array/vehicle_type_array"
            android:gravity="center_horizontal"
            android:prompt="@string/vehicle_type_prompt"
            android:spinnerMode="dropdown"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/model_year"/>

        <Button
            android:id="@+id/vehicleYearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_the_model_year"
            android:text="@string/set_model_year"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/make_label" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/makeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:inputType="text|textCapWords|textAutoComplete"
            android:maxLines="1"
            android:textStyle="normal|bold"
            android:hint="@string/enter_the_make" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/model_label" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/modelEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:inputType="text|textCapWords|textAutoComplete"
            android:maxLines="1"
            android:textStyle="normal|bold"
            android:hint="@string/enter_the_model" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/vin_label" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/vehicleVinEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text|textCapCharacters"
            android:maxLines="1"
            android:textStyle="normal|bold"
            android:hint="@string/enter_the_vin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lpEditContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/license_plate_label" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/vehicleLicensePlateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text|textCapCharacters"
            android:maxLines="1"
            android:textStyle="normal|bold"
            android:hint="@string/enter_the_license_plate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lpRenewalDateEditContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/lp_renew_date_label" />

        <Button
            android:id="@+id/vehicleLpRenewalDateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/set_renewal_date"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/notes_label" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/vehNotesEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:padding="5dp"
        android:textStyle="normal|bold"
        android:hint="@string/enter_notes_here" />

</LinearLayout>
