<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vehicle_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context="com.diversedistractions.vehiclelog.VehicleDetailFragment" >

    <ImageView
        android:id="@+id/vehicleImage"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/vi_no_vehicle_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/yearLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/model_year" />

        <TextView
            android:id="@+id/vehicleYearText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_vehicle_year_to_display"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/makeLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/make_label" />

        <TextView
            android:id="@+id/makeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/no_vehicle_make_to_display"
            android:textStyle="normal|bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/modelLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/model_label" />

        <TextView
            android:id="@+id/modelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/no_vehicle_model_to_display"
            android:textStyle="normal|bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vinLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/vin_label" />

        <TextView
            android:id="@+id/vehicleVinText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/no_vin_to_display"
            android:textStyle="normal|bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lpViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/licensePlateLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/license_plate_label" />

        <TextView
            android:id="@+id/vehicleLicensePlateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/no_license_plate_to_display"
            android:textStyle="normal|bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lpRenewalDateViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LpRenewalDateLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/lp_renew_date_label" />

        <TextView
            android:id="@+id/vehicleLpRenewalDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_renewal_date_to_display"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toDateFuelEconLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/fuel_economy_label" />

        <TextView
            android:id="@+id/vehToDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/no_fuel_economy_to_display"
            android:textStyle="normal|bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/notesLabelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/notes_label" />

    <TextView
        android:id="@+id/vehNotesText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:minLines="4"
        android:padding="5dp"
        android:text="@string/no_notes_to_display"
        android:textStyle="normal|bold" />

</LinearLayout>
