<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.diversedistractions.vehiclelog.VehicleImageChoiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_vehicle_image_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:background="@color/colorPrimary"
            android:padding="@dimen/text_margin" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/text_margin">
            <RadioButton
                android:text="@string/choose_app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appIconRadioButton" />
            <RadioButton
                android:text="@string/choose_image_on_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chooseImageRadioButton" />
            <RadioButton
                android:text="@string/take_a_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/takePhotoRadioButton" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_margin">

            <Button
                android:id="@+id/btnImageChoiceOk"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ok"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnImageChoiceCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
