<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vehicle_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    >

    <ImageView
        android:id="@+id/vehicleImage"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:contentDescription="@string/vehicle_image_content_description"
        app:srcCompat="@drawable/vi_no_vehicle_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vehicleYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/no_vehicle_year_to_display"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorListItemText" />

        <TextView
            android:id="@+id/makeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/no_vehicle_make_to_display"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorListItemText" />

        <TextView
            android:id="@+id/modelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/no_vehicle_model_to_display"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorListItemText" />
    </LinearLayout>
</LinearLayout>